--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -51,4 +51,7 @@ html.dark {
     --form-tag-bg-color: #171c28;
     --filter-arrow-up-color: brightness(0) saturate(100%) invert(15%) sepia(14%) saturate(867%) hue-rotate(183deg)
         brightness(94%) contrast(91%);
+
+    // footer
+    --footer-bg-color: #171c28;
 }
