--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -51,4 +51,10 @@ html {
     --filter-form-shadow: rgba(200, 200, 200, 0.4);
 
     --form-tag-bg-color: #f8f8fb;
+
+    // footer
+    --footer-bg-color: #efeeea;
+
+    // auth
+    --auth-bg-color: #fff;
 }
