--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,175 @@
-<div class="header__inner">
-    <h1>footer pdasjkdjage</h1>
+<div class="container">
+    <div class="footer__top">
+        <div class="footer__row">
+            <div class="footer__column">
+                <div class="footer__item">
+                    <a href="./" class="logo">
+                        <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon" />
+                        <h1 class="logo__title">grocerymart</h1>
+                    </a>
+                    <p class="footer__desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum nisi, molestias amet debitis
+                        eos?
+                    </p>
+                    <a href="#!" class="footer__check"
+                        >Check it out
+                        <img src="./assets/icons/arrow-right.svg" alt="" class="footer__arrow icon" />
+                    </a>
+                </div>
+                <div class="footer__item">
+                    <form action="" class="footer__form">
+                        <input type="text" class="footer__form-input" placeholder="Email Address" />
+                        <button class="footer__form-btn">
+                            <img src="./assets/icons/send.svg" alt="" class="footer__form-icon" />
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__heading">Products</h3>
+                <ul class="footer__list">
+                    <li>
+                        <a href="#!" class="footer__item-link">Why Grocery Mart</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Product Update</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Email Marketing</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Websites</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Transactional Email</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">How we compare</a>
+                    </li>
+
+                    <li>
+                        <a href="#!" class="footer__item-link">Security</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Status</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__heading">Resources</h3>
+                <ul class="footer__list">
+                    <li>
+                        <a href="#!" class="footer__item-link">Guides & Tutorials</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Marketing Tips</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Marketing Glossary</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Browser by Topic</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Integrations Directory</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__heading">Community</h3>
+                <ul class="footer__list">
+                    <li>
+                        <a href="#!" class="footer__item-link">Agencies & Freelancers</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Developers</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Events</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__heading">Company</h3>
+                <ul class="footer__list">
+                    <li>
+                        <a href="#!" class="footer__item-link">Our story</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Newsroom</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Annual report</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="footer__item-link">Careers</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__heading">Contacts</h3>
+                <ul class="footer__list">
+                    <li>
+                        <p class="footer__label">Email:</p>
+                        <a href="mailto:contact@grocerymart.com" class="footer__link"> contact@grocerymart.com </a>
+                    </li>
+                    <li>
+                        <p class="footer__label">Hotline:</p>
+                        <a href="tel:999190099" class="footer__link">999190099</a>
+                    </li>
+                    <li>
+                        <p class="footer__label">Address:</p>
+                        <p class="footer__text">
+                            No. 11D, Lot A10, Nam Trung Yen urban area, Yen Hoa Ward, Cau Giay District, City. Hanoi
+                        </p>
+                    </li>
+                    <li>
+                        <p class="footer__label">Hours:</p>
+                        <p class="footer__text">M - F 08:00am - 06:00pm</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer__bottom">
+        <div class="footer__application">
+            <a href="#!" class="footer__app-link">
+                <img src="./assets/icons/app-store.svg" alt="" class="footer__app-img" />
+            </a>
+            <a href="#!" class="footer__app-link">
+                <img src="./assets/icons/google-play.svg" alt="" class="footer__app-img" />
+            </a>
+        </div>
+        <div class="footer__socials">
+            <a href="#!" class="footer__social-link">
+                <i class="fa-brands fa-facebook footer__social-link-icon footer__social-link--facebook"></i>
+            </a>
+            <a href="#!" class="footer__social-link">
+                <i class="fa-brands fa-twitter footer__social-link-icon footer__social-link--twitter"></i>
+            </a>
+            <a href="#!" class="footer__social-link">
+                <i class="fa-brands fa-instagram footer__social-link-icon footer__social-link--instagram"></i>
+            </a>
+            <a href="#!" class="footer__social-link">
+                <i class="fa-brands fa-tiktok footer__social-link-icon footer__social-link--tiktok"></i>
+            </a>
+            <a href="#!" class="footer__social-link">
+                <i class="fa-brands fa-linkedin footer__social-link-icon footer__social-link--linkedin"></i>
+            </a>
+            <a href="#!" class="footer__social-link">
+                <i class="fa-brands fa-youtube footer__social-link-icon footer__social-link--youtube"></i>
+            </a>
+        </div>
+        <div class="footer_column">
+            <select name="language" id="language" class="footer__select">
+                <option value="volvo">English</option>
+                <option value="saab">VietNam</option>
+                <option value="opel">Korea</option>
+                <option value="audi">China</option>
+            </select>
+            <p class="footer__desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quis ullam nihil debitis? Error.
+            </p>
+        </div>
+    </div>
 </div>
