--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -41,6 +41,9 @@ select {
     -webkit-tap-highlight-color: transparent;
     outline: none;
 }
+input {
+    background: transparent;
+}
 
 .icon {
     filter: var(--icon-color);
