--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -36,6 +36,10 @@
 
 // buttons
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     height: 46px;
     padding: 0 20px;
     border-radius: 6px;
@@ -45,7 +49,9 @@
     user-select: none;
 
     + .btn {
-        margin-left: 20px;
+        &:not(.btn--no-margin) {
+            margin-left: 20px;
+        }
     }
 
     &--text {
