--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -4609,10 +4609,198 @@
         </nav>
         <div class="navbar__overlay js-toggle" toggle-target="#navbar"></div>
 
-        <!-- action -->
         <div class="top-act">
-            <a href="../sign-in.html" class="btn btn--text d-md-none">Sign In</a>
-            <a href="../sign-up.html" class="top-act__sign-up btn btn--primary">Sign Up</a>
+            <div class="top-act__group d-md-none top-act__group--single">
+                <button class="top-act__btn">
+                    <img src="./assets/icons/search.svg" alt="" class="icon top-act__icon" />
+                </button>
+            </div>
+
+            <div class="top-act__group d-md-none">
+                <button class="top-act__btn">
+                    <img src="./assets/icons/heart.svg" alt="" class="icon top-act__icon" />
+                    <span class="top-act__title">03</span>
+                </button>
+                <div class="top-act__separate"></div>
+
+                <button class="top-act__btn">
+                    <img src="./assets/icons/cart.svg" alt="" class="icon top-act__icon" />
+                    <span class="top-act__title">$65.42</span>
+                </button>
+            </div>
+
+            <div class="top-act__use">
+                <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+            </div>
+        </div>
+    </div>
+</div>
+<!-- sub-menu -->
+<div class="sub-menu">
+    <!-- sub-menu-column 1 -->
+    <div class="sub-menu__column">
+        <div class="menu-column">
+            <div class="menu-column__icon">
+                <img src="./assets/img/category/cate-2.1.svg" alt="" class="menu-column__icon-1" />
+                <img src="./assets/img/category/cate-2.2.svg" alt="" class="menu-column__icon-2" />
+            </div>
+            <div class="menu-column__content">
+                <h2 class="menu-column__heading">Sports & Outdoors</h2>
+                <ul class="menu-column__list">
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Running shoes </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Yoga mat </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Cycling helmet </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Fishing rod </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Soccer ball </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Tennis racket </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu-column">
+            <div class="menu-column__icon">
+                <img src="./assets/img/category/cate-5.3.svg" alt="" class="menu-column__icon-1" />
+                <img src="./assets/img/category/cate-5.4.svg" alt="" class="menu-column__icon-2" />
+            </div>
+            <div class="menu-column__content">
+                <h2 class="menu-column__heading">Swimming goggles</h2>
+                <ul class="menu-column__list">
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Golf clubs </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Trekking poles </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Fitness Trackers </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Volleyball net </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Climbing harness </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- sub-menu-column 2 -->
+    <div class="sub-menu__column">
+        <div class="menu-column">
+            <div class="menu-column__icon">
+                <img src="./assets/img/category/cate-2.5.svg" alt="" class="menu-column__icon-1" />
+                <img src="./assets/img/category/cate-2.6.svg" alt="" class="menu-column__icon-2" />
+            </div>
+            <div class="menu-column__content">
+                <h2 class="menu-column__heading">Computers</h2>
+                <ul class="menu-column__list">
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Shop All Computers </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Laptops </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> PC Gaming </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Monitors </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Chromebook</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Printers & Ink</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Shop all TVs</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Computer Accessories</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Desktops</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Tax Software</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Computer Software</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">PC Finder</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- sub-menu-column 3 -->
+    <div class="sub-menu__column">
+        <div class="menu-column">
+            <div class="menu-column__icon">
+                <img src="./assets/img/category/cate-3.1.svg" alt="" class="menu-column__icon-1" />
+                <img src="./assets/img/category/cate-3.2.svg" alt="" class="menu-column__icon-2" />
+            </div>
+            <div class="menu-column__content">
+                <h2 class="menu-column__heading">Savings</h2>
+                <ul class="menu-column__list">
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Tech Savings </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Overstock Savings </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Tech Rollbacks </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu-column">
+            <div class="menu-column__icon">
+                <img src="./assets/img/category/cate-2.3.svg" alt="" class="menu-column__icon-1" />
+                <img src="./assets/img/category/cate-3.2.svg" alt="" class="menu-column__icon-2" />
+            </div>
+            <div class="menu-column__content">
+                <h2 class="menu-column__heading">Cell Phones</h2>
+                <ul class="menu-column__list">
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Wireless Deals </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> 5G Phones </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Prepaid Phones & Plans </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link"> Refurbished Phones </a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">iPhone Accessories</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Cases & Screen Protectors</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Walmart Protection Plan</a>
+                    </li>
+                    <li class="menu-column__item">
+                        <a href="#!" class="menu-column__link">Unlocked Phones</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
