--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -47,6 +47,7 @@
     font-size: 1.8rem;
     font-weight: 500;
     user-select: none;
+    white-space: nowrap;
 
     + .btn {
         &:not(.btn--no-margin) {
