--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -167,6 +167,7 @@ a,
 img,
 button,
 input,
+label,
 textarea,
 select {
   font-family: inherit;
@@ -1312,6 +1313,20 @@ input {
     display: none !important;
   }
 }
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
 html.dark {
   --text-color: #ffffff;
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(355deg) brightness(103%)
@@ -1346,6 +1361,17 @@ html.dark {
   --filter-arrow-up-color: brightness(0) saturate(100%) invert(15%) sepia(14%) saturate(867%) hue-rotate(183deg)
       brightness(94%) contrast(91%);
   --footer-bg-color: #171c28;
+  --auth-bg-color: #292e39;
+  --intro-text-color: #b9babe;
+  --auth-intro-color: #171c28;
+  --auth-btn-google: #b9babe;
+  --auth-btn-google-icon: brightness(0) saturate(100%) invert(97%) sepia(11%) saturate(476%) hue-rotate(180deg)
+      brightness(78%) contrast(87%);
+  --auth-heading-color: var(--auth-btn-google);
+  --product-detail-bg: #292e39;
+  --product-info-bg: #171c28;
+  --breadcrumb-bg: #171c28;
+  --breadcrumb-shadow: rgba(23, 28, 40, 0.2);
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1383,6 +1409,10 @@ html {
   --form-tag-bg-color: #f8f8fb;
   --footer-bg-color: #efeeea;
   --auth-bg-color: #fff;
+  --product-detail-bg: #fff;
+  --product-info-bg: #f6f6f6;
+  --breadcrumb-bg: #f6f6f6;
+  --breadcrumb-shadow: rgba(237, 237, 246, 0.2);
 }
 @media (max-width: 991.98px) {
   html {
@@ -1393,6 +1423,11 @@ html {
 @media (max-width: 767.98px) {
   html {
     --cate-bg-color: #fff;
+  }
+}
+@media (max-width: 991.98px) {
+  html {
+    --auth-intro-color: #fff;
   }
 }
 
@@ -1428,6 +1463,27 @@ html {
 @media (max-width: 991.98px) {
   .top-bar {
     padding: 22px 0;
+  }
+}
+@media (max-width: 991.98px) {
+  .top-bar__logo {
+    column-gap: 10px !important;
+    margin-left: 39px;
+  }
+  .top-bar__logo-title {
+    font-size: 1.8rem !important;
+  }
+  .top-bar__logo-icon {
+    width: 24px;
+  }
+}
+@media (max-width: 575.98px) {
+  .top-bar__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    margin-left: 0;
   }
 }
 
@@ -1647,31 +1703,10 @@ html {
   align-items: center;
   column-gap: 14px;
 }
-@media (max-width: 991.98px) {
-  .logo {
-    column-gap: 10px;
-    margin-left: 39px;
-  }
-}
-@media (max-width: 575.98px) {
-  .logo {
-    margin-left: 0;
-  }
-}
 .logo__title {
   font-size: 2.2rem;
   font-weight: 700;
   line-height: 145.455%;
-}
-@media (max-width: 991.98px) {
-  .logo__title {
-    font-size: 1.8rem;
-  }
-}
-@media (max-width: 991.98px) {
-  .logo__icon {
-    width: 24px;
-  }
 }
 
 .dropdown {
@@ -2037,6 +2072,7 @@ html {
   font-size: 1.8rem;
   font-weight: 500;
   user-select: none;
+  white-space: nowrap;
 }
 .btn + .btn:not(.btn--no-margin) {
   margin-left: 20px;
@@ -2355,12 +2391,32 @@ html {
   }
 }
 
+.form:has(:invalid) .form__submit-btn {
+  opacity: 0.5;
+  pointer-events: none;
+}
 .form__group {
   margin-top: 30px;
+}
+@media (max-width: 767.98px) {
+  .form__group + .form__group {
+    margin-top: 20px;
+  }
 }
 .form__group--inline {
   display: flex;
   align-items: center;
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__text-input {
+  border-color: #d5544b;
+  background: rgba(213, 84, 75, 0.1);
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__error,
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__icon-error {
+  display: block;
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__icon {
+  display: none;
 }
 .form__text-input {
   display: flex;
@@ -2369,6 +2425,11 @@ html {
   align-items: center;
   border-radius: 10px;
   border: 1.5px solid #d2d1d6;
+}
+@media (max-width: 767.98px) {
+  .form__text-input {
+    height: 48px;
+  }
 }
 .form__text-input:focus-within {
   border-color: #77dae6;
@@ -2383,8 +2444,26 @@ html {
 .form__input::placeholder {
   color: #d2d1d6;
 }
+@media (max-width: 767.98px) {
+  .form__input::placeholder {
+    font-size: 1.6rem;
+  }
+}
+.form__error {
+  text-align: left;
+  color: #d5544b;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-top: 10px;
+  display: none;
+}
 .form__icon {
   margin-left: 12px;
+}
+.form__icon-error {
+  display: none;
+  margin-left: 12px;
+  animation: shake 0.8s;
 }
 .form__pull-right {
   margin-left: auto;
@@ -2398,6 +2477,11 @@ html {
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 146.667%;
+}
+@media (max-width: 767.98px) {
+  .form__checkbox-label {
+    font-size: 1.4rem;
+  }
 }
 .form__checkbox::before, .form__checkbox::after {
   position: absolute;
@@ -2422,6 +2506,54 @@ html {
   rotate: -45deg;
   left: 2px;
   top: 3px;
+}
+
+.message {
+  font-size: 1.5rem;
+  padding: 14px;
+  width: 100%;
+  border-radius: 10px;
+  text-align: left;
+  font-weight: 500;
+}
+.message--success {
+  border: 1.5px solid #009100;
+  background: rgba(63, 220, 123, 0.2);
+}
+
+.breadcrumbs {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  min-height: 64px;
+  padding: 20px;
+  border-radius: 10px;
+  background: var(--breadcrumb-bg);
+  box-shadow: 0px 20px 60px 10px var(--breadcrumb-shadow);
+}
+@media (max-width: 767.98px) {
+  .breadcrumbs {
+    gap: 16px;
+  }
+}
+.breadcrumbs__link {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  white-space: nowrap;
+  color: #9e9da8;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 150%;
+}
+@media (max-width: 767.98px) {
+  .breadcrumbs__link {
+    font-size: 1.4rem;
+  }
+}
+.breadcrumbs__link--current {
+  color: inherit;
 }
 
 .home__container {
@@ -2638,8 +2770,13 @@ html {
 }
 
 .auth {
-  min-height: 100vh;
   display: flex;
+  min-height: 100vh;
+}
+@supports (-webkit-touch-callout: none) {
+  .auth {
+    min-height: -webkit-fill-available;
+  }
 }
 .auth__intro, .auth__content {
   flex: 1;
@@ -2651,9 +2788,10 @@ html {
   align-items: center;
   flex-direction: column;
   gap: 50px;
+  background: var(--auth-intro-color);
 }
 .auth__intro-img {
-  max-width: 100%;
+  width: min(424px, 100%);
 }
 .auth__intro-text {
   text-align: center;
@@ -2661,9 +2799,41 @@ html {
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 144.444%;
+  color: var(--intro-text-color);
+}
+@media (max-width: 767.98px) {
+  .auth__intro-text {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 767.98px) {
+  .auth__intro-logo, .auth__intro-next {
+    position: absolute;
+    left: 50%;
+    translate: -50%;
+  }
+  .auth__intro-logo {
+    margin-left: 0;
+    top: 80px;
+  }
+  .auth__intro-next {
+    bottom: 50px;
+  }
 }
 .auth__content {
   background: var(--auth-bg-color);
+}
+@media (max-width: 767.98px) {
+  .auth__content {
+    position: fixed;
+    z-index: 1;
+    inset: 0;
+    transition: translate, 0.5s;
+    overflow-y: auto;
+  }
+  .auth__content.hide {
+    translate: 100%;
+  }
 }
 .auth__content-inner {
   padding: 50px 0;
@@ -2674,23 +2844,51 @@ html {
   margin: 0 auto;
   width: min(460px, 100%);
 }
+@media (max-width: 767.98px) {
+  .auth__content-inner {
+    padding: 30px 0;
+  }
+}
 .auth__heading {
   margin-top: 50px;
   font-size: 3rem;
   font-weight: 500;
   line-height: 146.667%;
+  color: var(--auth-heading-color);
+}
+@media (max-width: 767.98px) {
+  .auth__heading {
+    margin-top: 35px;
+    font-size: 2.2rem;
+  }
 }
 .auth__desc {
   color: #9e9da8;
-  padding: 0 30px;
+  padding: 0 20px;
   margin-top: 10px;
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 146.667%;
 }
+@media (max-width: 767.98px) {
+  .auth__desc {
+    font-size: 1.4rem;
+  }
+}
+.auth__message {
+  margin-top: 30px;
+}
 .auth__form {
   width: 100%;
   margin-top: 30px;
+}
+@media (max-width: 767.98px) {
+  .auth__form {
+    margin-top: 0;
+  }
+}
+.auth__form-forgot {
+  margin-top: 5px;
 }
 .auth__btn-group {
   display: flex;
@@ -2701,6 +2899,19 @@ html {
 .auth__btn {
   width: 100%;
   height: 50px;
+  color: #1a162e;
+}
+.auth__btn-icon {
+  filter: var(--auth-btn-google-icon);
+}
+.auth__btn--google {
+  color: var(--auth-btn-google);
+}
+.auth__link {
+  color: #0071dc;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 146.667%;
 }
 .auth__text {
   margin-top: 108px;
@@ -2709,9 +2920,103 @@ html {
   font-weight: 400;
   line-height: 144.444%;
 }
-.auth__link {
-  color: #0071dc;
+@media (max-width: 767.98px) {
+  .auth__text {
+    margin-top: 56px;
+    font-size: 1.6rem;
+  }
+  .auth__text-link {
+    font-size: inherit;
+  }
+}
+.auth__text-link {
+  font-size: inherit;
+}
+
+.product-page {
+  display: flex;
+  flex-direction: column;
+  min-height: 80vh;
+  background: var(--product-detail-bg);
+}
+.product-page .product__container {
+  margin-top: 30px;
+}
+.product-page .prod-preview {
+  padding: 30px;
+}
+.product-page .prod-preview__list {
+  display: flex;
+  overflow: hidden;
+}
+.product-page .prod-preview__item {
+  position: relative;
+  width: 100%;
+  padding-top: 92%;
+  flex-shrink: 0;
+}
+.product-page .prod-preview__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.product-page .prod-preview__thumb {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px;
+}
+.product-page .prod-preview__thumb-img {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  border: 1.5px solid rgba(159, 158, 169, 0.6);
+  border-radius: 8px;
+  opacity: 0.8;
+  cursor: pointer;
+  transition: opacity;
+}
+.product-page .prod-preview__thumb-img:hover:not(.product-page .prod-preview__thumb-img--current) {
+  opacity: 1;
+  border-color: #9f9ea9;
+}
+.product-page .prod-preview__thumb-img--current {
+  opacity: 1;
+  border-color: #0b8bfc;
+}
+
+.prod-info {
+  padding: 60px;
+  background: var(--product-info-bg);
+}
+.prod-info__heading {
+  font-size: 2.6rem;
   font-weight: 500;
+  line-height: 138.462%;
+}
+
+.prod-prop {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-top: 30px;
+}
+.prod-prop__icon {
+  align-self: flex-start;
+}
+.prod-prop__title {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 144.444%;
+}
+.prod-prop__desc {
+  margin-top: 4px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 142.857%;
 }
 
 /*# sourceMappingURL=main.css.map */
