--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -57,4 +57,15 @@ html {
 
     // auth
     --auth-bg-color: #fff;
+    @include abstracts.screen(lg) {
+        --auth-intro-color: #fff;
+    }
+
+    // product-detail
+    --product-detail-bg: #fff;
+    --product-info-bg: #f6f6f6;
+
+    // breadcrumbs
+    --breadcrumb-bg: #f6f6f6;
+    --breadcrumb-shadow: rgba(237, 237, 246, 0.2);
 }
