--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -6,11 +6,10 @@
         </button>
 
         <!-- logo -->
-        <a href="./" class="logo">
-            <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon" />
-            <h1 class="logo__title">grocerymart</h1>
+        <a href="./" class="logo top-bar__logo">
+            <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon top-bar__logo-icon" />
+            <h1 class="logo__title top-bar__logo-title">grocerymart</h1>
         </a>
-
         <!-- navbar -->
         <nav id="navbar" class="navbar hide">
             <button class="navbar__close-btn js-toggle" toggle-target="#navbar">
