--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,9 @@
         </button>
 
         <!-- logo -->
-        <a href="./" class="logo">
-            <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon" />
-            <h1 class="logo__title">grocerymart</h1>
+        <a href="./" class="logo top-bar__logo">
+            <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon top-bar__logo-icon" />
+            <h1 class="logo__title top-bar__logo-title">grocerymart</h1>
         </a>
 
         <!-- navbar -->
