--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -55,8 +55,12 @@
         }
     }
 
+    &--small {
+        height: 40px;
+        padding: 0 16px;
+    }
+
     &--text {
-        color: #9e9da8;
         background: transparent;
         font-weight: 400;
     }
