--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -8,3 +8,7 @@
 @forward "./forms";
 @forward "./messages";
 @forward "./breadcrumbs";
+@forward "./search-bar";
+@forward "./review-card";
+@forward "./text-content";
+@forward "./dialog";
