--- a/scss/pages/_product-detail.scss
+++ b/scss/pages/_product-detail.scss
@@ -1,19 +1,39 @@
+@use "../abstracts";
+
 .product-page {
     display: flex;
     flex-direction: column;
     min-height: 80vh;
 
     background: var(--product-detail-bg);
-
+    padding-bottom: 50px;
     .product__container {
         margin-top: 30px;
+        @include abstracts.screen(md) {
+            margin-top: 20px;
+        }
     }
 
     .prod-preview {
         padding: 30px;
+        background: var(--prod-preview-color);
+
+        @include abstracts.screen(lg) {
+            border-radius: 20px;
+
+            display: flex;
+            flex-direction: row-reverse;
+            box-shadow: 0px 20px 60px 10px var(--breadcrumb-shadow);
+        }
+        @include abstracts.screen(lg) {
+            padding: 16px;
+        }
         &__list {
             display: flex;
             overflow: hidden;
+            @include abstracts.screen(lg) {
+                flex: 1;
+            }
         }
         &__item {
             position: relative;
@@ -36,6 +56,15 @@
             gap: 20px;
             padding: 30px;
 
+            @include abstracts.screen(lg) {
+                flex-direction: column;
+                padding-left: 0;
+            }
+
+            @include abstracts.screen(md) {
+                display: none;
+            }
+
             &-img {
                 width: 60px;
                 height: 60px;
@@ -44,12 +73,12 @@
 
                 border-radius: 8px;
                 opacity: 0.8;
-                cursor: pointer;
                 transition: opacity;
 
                 &:hover:not(&--current) {
                     opacity: 1;
                     border-color: #9f9ea9;
+                    cursor: pointer;
                 }
                 &--current {
                     opacity: 1;
@@ -59,15 +88,95 @@
         }
     }
 }
+.prod-info-content {
+    background: var(--prod-info-content-bg);
+    border-radius: 20px;
+}
 
 .prod-info {
+    border-radius: 10px;
     padding: 60px;
+
     background: var(--product-info-bg);
 
+    @include abstracts.screen(xxl) {
+        padding: 40px;
+    }
+
+    @include abstracts.screen(lg) {
+        border-radius: 20px;
+        margin-top: 30px;
+    }
+    @include abstracts.screen(md) {
+        margin-top: 0;
+        padding: 0 16px 16px;
+    }
     &__heading {
         font-size: 2.6rem;
         font-weight: 500;
         line-height: 138.462%;
+    }
+    &__label {
+        margin-top: 30px;
+    }
+
+    &__tag {
+        background: var(--prod-tag-color);
+    }
+    &__card {
+        margin-top: 30px;
+        padding: 20px;
+        border-radius: 6px;
+        border: 1px solid #b9babe;
+    }
+    &__row {
+        display: flex;
+        align-items: center;
+    }
+
+    &__price {
+        color: var(--prod-price-color);
+        font-size: 1.6rem;
+        font-weight: 500;
+        line-height: 150%;
+    }
+    &__tax {
+        margin-left: 10px;
+        padding: 2px 8px;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), #67b044;
+        color: #67b044;
+        font-size: 1.4rem;
+        font-weight: 500;
+        line-height: 142.857%;
+    }
+
+    &__total-price {
+        margin: 20px 0;
+        color: var(--prod-price-color);
+        font-size: 2.6rem;
+        font-weight: 500;
+        line-height: 138.462%;
+    }
+
+    &__add-to-card {
+        flex: 1;
+    }
+
+    &__like-btn {
+        margin-left: 20px;
+        background: transparent;
+        border-radius: 6px;
+        border: 1px solid #d2d1d6;
+    }
+}
+
+.prod-props {
+    padding-left: 30px;
+    @include abstracts.screen(xxl) {
+        padding-left: 15px;
+    }
+    @include abstracts.screen(lg) {
+        padding-left: 0;
     }
 }
 
@@ -77,6 +186,10 @@
     gap: 16px;
 
     margin-top: 30px;
+
+    @include abstracts.screen(md) {
+        margin-top: 20px;
+    }
     &__icon {
         align-self: flex-start;
     }
@@ -91,5 +204,64 @@
         font-size: 1.4rem;
         font-weight: 400;
         line-height: 142.857%;
+    }
+}
+
+.prod-tab {
+    &__list {
+        display: flex;
+        align-items: center;
+        margin: 0 -30px;
+
+        @include abstracts.screen(md) {
+            margin: 0 -10px;
+            flex-wrap: wrap;
+        }
+    }
+
+    &__item {
+        padding: 0 30px;
+        color: #9e9da8;
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 145.455%;
+        user-select: none;
+        cursor: pointer;
+        white-space: nowrap;
+
+        @include abstracts.screen(md) {
+            padding: 8px 10px;
+
+            font-size: 1.6rem;
+        }
+        &--current {
+            color: inherit;
+        }
+    }
+    &__contents {
+        padding-top: 30px;
+    }
+    &__text-content {
+        margin-top: -20px;
+    }
+
+    &__content {
+        display: none;
+
+        &--current {
+            display: block;
+        }
+    }
+}
+
+.prod-content {
+    &__heading {
+        margin-bottom: 30px;
+        font-size: 2.2rem;
+        font-weight: 600;
+        line-height: 141.667%;
+        @include abstracts.screen(md) {
+            font-size: 1.8rem;
+        }
     }
 }
