--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,7 +5,9 @@
 ::after {
     box-sizing: border-box;
 }
-
+* {
+    -webkit-tap-highlight-color: transparent;
+}
 html {
     font-size: 62.5%;
 }
@@ -39,7 +41,6 @@ select {
     font-family: inherit;
     color: inherit;
     border: none;
-    -webkit-tap-highlight-color: transparent;
     outline: none;
 }
 input {
@@ -55,4 +56,13 @@ input {
         padding-left: 20px !important;
         padding-right: 20px !important;
     }
+}
+
+i,
+em {
+    font-style: italic;
+}
+b,
+strong {
+    font-weight: 600;
 }
