--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -150,7 +150,7 @@
         display: flex;
         justify-content: space-between;
         height: 50px;
-        padding: 0 40px;
+        padding: 0 15px;
         @extend %flexItemCenter;
         column-gap: 6px;
         font-size: 1.5rem;
@@ -191,6 +191,14 @@
             height: 40px !important ;
             padding: 0 8px !important   ;
             font-size: 1.5rem !important    ;
+        }
+    }
+
+    &__btn-wrap {
+        position: relative;
+
+        &:hover .act-dropdown {
+            display: block;
         }
     }
 
@@ -259,5 +267,122 @@
     }
     &__qnt {
         margin-left: auto;
+    }
+}
+
+.act-dropdown {
+    position: absolute;
+    top: 48px;
+    right: -59px;
+    width: min(500px, 100vh);
+    padding-top: 29px;
+    display: none;
+    &__inner {
+        position: relative;
+        padding: 30px;
+        border-radius: 20px;
+        background: var(--header-act-dropdown-bg);
+        box-shadow: 0px 40px 90px 20px var(--header-act-dropdown-shadow);
+    }
+    &__arrow {
+        position: absolute;
+        top: -15px;
+        right: 88px;
+        height: 20.5px;
+        filter: var(--dropdown-arrow-color);
+    }
+
+    &__top {
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &__title {
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 145.455%;
+    }
+
+    &__view-all {
+        color: #0071dc;
+        font-size: 1.8rem;
+        line-height: 145.455%;
+    }
+    &__bottom {
+        margin-top: 20px;
+        padding: 30px 0;
+        border-top: 1px solid var(--header-act-dropdown-border-color);
+        border-bottom: 1px solid var(--header-act-dropdown-border-color);
+    }
+
+    &__separate {
+        height: 1px;
+        background: var(--header-act-dropdown-border-color);
+        margin: 20px 0;
+    }
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        + .act-dropdown__row {
+            margin-top: 10px;
+        }
+        &--bold {
+            font-weight: 500;
+        }
+    }
+    &__list {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        padding-bottom: 10px;
+    }
+    &__label {
+        font-size: 1.8rem;
+        line-height: 145.455%;
+    }
+    &__value {
+        font-size: 1.8rem;
+        line-height: 145.455%;
+    }
+    &__checkout {
+        margin-top: 30px;
+        display: flex;
+        justify-content: flex-end;
+        &-btn {
+            min-width: 278px !important;
+        }
+    }
+}
+.cart-preview-item {
+    height: 100%;
+    text-align: left;
+    &__img-wrap {
+        position: relative;
+        padding-top: 100%;
+        border: 1px solid #675c5c66;
+        border-radius: 4px;
+    }
+
+    &__thumb {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    &__title {
+        margin-top: 14px;
+        font-size: 1.4rem;
+        line-height: 142.857%;
+    }
+    &__price {
+        margin-top: 6px;
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 146.667%;
     }
 }
