--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -15,7 +15,7 @@
             <button class="navbar__close-btn js-toggle" toggle-target="#navbar">
                 <img src="./assets/icons/arrow-left.svg" alt="" class="icon" />
             </button>
-            <a href="#!" class="nav-btn d-none d-md-flex">
+            <a href="./checkout.html" class="nav-btn d-none d-md-flex">
                 <img src="./assets/icons/cart.svg" alt="" class="icon nav-btn__icon" />
                 <span class="nav-btn__title">Card</span>
                 <span class="nav-btn__qnt">3</span>
@@ -4616,189 +4616,162 @@
             </div>
 
             <div class="top-act__group d-md-none">
-                <button class="top-act__btn">
-                    <img src="./assets/icons/heart.svg" alt="" class="icon top-act__icon" />
-                    <span class="top-act__title">03</span>
-                </button>
+                <div class="top-act__btn-wrap">
+                    <button class="top-act__btn">
+                        <img src="./assets/icons/heart.svg" alt="" class="icon top-act__icon" />
+                        <span class="top-act__title">03</span>
+                    </button>
+                    <!-- dropdown -->
+                    <div class="act-dropdown">
+                        <div class="act-dropdown__inner">
+                            <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow" />
+                            <div class="act-dropdown__top">
+                                <h2 class="act-dropdown__title">You have 3 item</h2>
+                                <a href="#!" class="act-dropdown__view-all">See All</a>
+                            </div>
+                            <div class="row row-cols-3 gx-2 act-dropdown__list">
+                                <div class="col">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
+                                            <img
+                                                src="./assets/img/product/item-1.png"
+                                                alt=""
+                                                class="cart-preview-item__thumb"
+                                            />
+                                        </div>
+                                        <h3 class="cart-preview-item__title">Lavazza Coffee Blends</h3>
+                                        <p class="cart-preview-item__price">$329.00</p>
+                                    </article>
+                                </div>
+                                <div class="col">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
+                                            <img
+                                                src="./assets/img/product/item-2.png"
+                                                alt=""
+                                                class="cart-preview-item__thumb"
+                                            />
+                                        </div>
+                                        <h3 class="cart-preview-item__title">Coffee Beans Espresso</h3>
+                                        <p class="cart-preview-item__price">$39.99</p>
+                                    </article>
+                                </div>
+                                <div class="col">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
+                                            <img
+                                                src="./assets/img/product/item-3.png"
+                                                alt=""
+                                                class="cart-preview-item__thumb"
+                                            />
+                                        </div>
+                                        <h3 class="cart-preview-item__title">Qualità Oro Mountain</h3>
+                                        <p class="cart-preview-item__price">$47.00</p>
+                                    </article>
+                                </div>
+                            </div>
+                            <div class="act-dropdown__separate"></div>
+                            <div class="act-dropdown__checkout">
+                                <a
+                                    href="./checkout.html"
+                                    class="btn btn--primary btn--rounded act-dropdown__checkout-btn"
+                                >
+                                    Check Out All
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="top-act__separate"></div>
 
-                <button class="top-act__btn">
-                    <img src="./assets/icons/cart.svg" alt="" class="icon top-act__icon" />
-                    <span class="top-act__title">$65.42</span>
-                </button>
+                <div class="top-act__btn-wrap">
+                    <button class="top-act__btn">
+                        <img src="./assets/icons/cart.svg" alt="" class="icon top-act__icon" />
+                        <span class="top-act__title">$65.42</span>
+                    </button>
+                    <!-- dropdown -->
+                    <div class="act-dropdown">
+                        <div class="act-dropdown__inner">
+                            <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow" />
+                            <div class="act-dropdown__top">
+                                <h2 class="act-dropdown__title">You have 3 item</h2>
+                                <a href="./checkout.html" class="act-dropdown__view-all">See All</a>
+                            </div>
+                            <div class="row row-cols-3 gx-2 act-dropdown__list">
+                                <div class="col">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
+                                            <img
+                                                src="./assets/img/product/item-1.png"
+                                                alt=""
+                                                class="cart-preview-item__thumb"
+                                            />
+                                        </div>
+                                        <h3 class="cart-preview-item__title">Lavazza Coffee Blends</h3>
+                                        <p class="cart-preview-item__price">$329.00</p>
+                                    </article>
+                                </div>
+                                <div class="col">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
+                                            <img
+                                                src="./assets/img/product/item-2.png"
+                                                alt=""
+                                                class="cart-preview-item__thumb"
+                                            />
+                                        </div>
+                                        <h3 class="cart-preview-item__title">Coffee Beans Espresso</h3>
+                                        <p class="cart-preview-item__price">$39.99</p>
+                                    </article>
+                                </div>
+                                <div class="col">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
+                                            <img
+                                                src="./assets/img/product/item-3.png"
+                                                alt=""
+                                                class="cart-preview-item__thumb"
+                                            />
+                                        </div>
+                                        <h3 class="cart-preview-item__title">Qualità Oro Mountain</h3>
+                                        <p class="cart-preview-item__price">$47.00</p>
+                                    </article>
+                                </div>
+                            </div>
+
+                            <div class="act-dropdown__bottom">
+                                <div class="act-dropdown__row">
+                                    <span class="act-dropdown__label">Subtotal:</span>
+                                    <span class="act-dropdown__value">$415.99</span>
+                                </div>
+                                <div class="act-dropdown__row">
+                                    <span class="act-dropdown__label">Texes:</span>
+                                    <span class="act-dropdown__value">Free</span>
+                                </div>
+                                <div class="act-dropdown__row">
+                                    <span class="act-dropdown__label">Shipping</span>
+                                    <span class="act-dropdown__value">$10.00</span>
+                                </div>
+                                <div class="act-dropdown__row act-dropdown__row--bold">
+                                    <span class="act-dropdown__label">Total Price</span>
+                                    <span class="act-dropdown__value">$425.99</span>
+                                </div>
+                            </div>
+                            <div class="act-dropdown__checkout">
+                                <a
+                                    href="./checkout.html"
+                                    class="btn btn--primary btn--rounded act-dropdown__checkout-btn"
+                                >
+                                    Check Out All
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="top-act__use">
                 <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
-            </div>
-        </div>
-    </div>
-</div>
-<!-- sub-menu -->
-<div class="sub-menu">
-    <!-- sub-menu-column 1 -->
-    <div class="sub-menu__column">
-        <div class="menu-column">
-            <div class="menu-column__icon">
-                <img src="./assets/img/category/cate-2.1.svg" alt="" class="menu-column__icon-1" />
-                <img src="./assets/img/category/cate-2.2.svg" alt="" class="menu-column__icon-2" />
-            </div>
-            <div class="menu-column__content">
-                <h2 class="menu-column__heading">Sports & Outdoors</h2>
-                <ul class="menu-column__list">
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Running shoes </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Yoga mat </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Cycling helmet </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Fishing rod </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Soccer ball </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Tennis racket </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="menu-column">
-            <div class="menu-column__icon">
-                <img src="./assets/img/category/cate-5.3.svg" alt="" class="menu-column__icon-1" />
-                <img src="./assets/img/category/cate-5.4.svg" alt="" class="menu-column__icon-2" />
-            </div>
-            <div class="menu-column__content">
-                <h2 class="menu-column__heading">Swimming goggles</h2>
-                <ul class="menu-column__list">
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Golf clubs </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Trekking poles </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Fitness Trackers </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Volleyball net </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Climbing harness </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- sub-menu-column 2 -->
-    <div class="sub-menu__column">
-        <div class="menu-column">
-            <div class="menu-column__icon">
-                <img src="./assets/img/category/cate-2.5.svg" alt="" class="menu-column__icon-1" />
-                <img src="./assets/img/category/cate-2.6.svg" alt="" class="menu-column__icon-2" />
-            </div>
-            <div class="menu-column__content">
-                <h2 class="menu-column__heading">Computers</h2>
-                <ul class="menu-column__list">
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Shop All Computers </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Laptops </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> PC Gaming </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Monitors </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Chromebook</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Printers & Ink</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Shop all TVs</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Computer Accessories</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Desktops</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Tax Software</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Computer Software</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">PC Finder</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- sub-menu-column 3 -->
-    <div class="sub-menu__column">
-        <div class="menu-column">
-            <div class="menu-column__icon">
-                <img src="./assets/img/category/cate-3.1.svg" alt="" class="menu-column__icon-1" />
-                <img src="./assets/img/category/cate-3.2.svg" alt="" class="menu-column__icon-2" />
-            </div>
-            <div class="menu-column__content">
-                <h2 class="menu-column__heading">Savings</h2>
-                <ul class="menu-column__list">
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Tech Savings </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Overstock Savings </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Tech Rollbacks </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="menu-column">
-            <div class="menu-column__icon">
-                <img src="./assets/img/category/cate-2.3.svg" alt="" class="menu-column__icon-1" />
-                <img src="./assets/img/category/cate-3.2.svg" alt="" class="menu-column__icon-2" />
-            </div>
-            <div class="menu-column__content">
-                <h2 class="menu-column__heading">Cell Phones</h2>
-                <ul class="menu-column__list">
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Wireless Deals </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> 5G Phones </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Prepaid Phones & Plans </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link"> Refurbished Phones </a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">iPhone Accessories</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Cases & Screen Protectors</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Walmart Protection Plan</a>
-                    </li>
-                    <li class="menu-column__item">
-                        <a href="#!" class="menu-column__link">Unlocked Phones</a>
-                    </li>
-                </ul>
             </div>
         </div>
     </div>
